--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js Express starter with MongoDB",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "start": "node start",
+    "lint": "gulp lint"
   },
   "repository": {
     "type": "git",
@@ -30,13 +31,11 @@
     "express": "^4.16.2",
     "express-useragent": "^1.0.12",
     "joi": "^13.1.2",
-    "mailgun-js": "^0.14.2",
     "moment": "^2.20.1",
     "mongoose": "^5.0.4",
     "mongoose-double": "0.0.1",
     "morgan": "^1.9.0",
     "nconf": "^0.10.0",
-    "pug": "^2.0.0-rc.4",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
