--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js Express starter with MongoDB",
   "main": "index.js",
   "scripts": {
-    "start": "node start",
+    "start": "node ./index.js",
     "lint": "gulp lint"
   },
   "repository": {
