--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 version: "2"
 services:
-  app:
-    container_name: nodejs-express-starter
-    restart: always
-    build: .
-    ports:
-      - "5000:5000"
-    links:
-      - mongo
-  mongo:
-    container_name: mongo
-    image: mongo
-    volumes:
-      - ./data:/data/db
-    ports:
-      - "27017:27017"
+    app:
+        container_name: nodejs-express-starter
+        restart: always
+        build: .
+        env_file:
+            - variables.env
+        ports:
+            - "5000:5000"
+        links:
+            - mongo
+
+    mongo:
+        container_name: mongo
+        image: mongo
+        volumes:
+            - ./data:/data/db
+        ports:
+            - "27017:27017"
