--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node ./server.js",
     "test": "npm run lint && npm run jest",
-    "jest": "jest --forceExit --coverage ./tests",
+    "jest": "jest ./spec",
     "lint": "gulp lint"
+  },
+  "jest": {
+    "forceExit": true
   },
   "repository": {
     "type": "git",
@@ -32,6 +35,7 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
     "express-useragent": "^1.0.12",
+    "jest-environment-node": "^22.3.0",
     "joi": "^13.1.2",
     "moment": "^2.20.1",
     "mongoose": "^5.0.4",
@@ -42,6 +46,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.17.0",
