--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: node_js
-services: mongodb
 
-cache:
-  yarn: false
+sudo: false
+env:
+  global:
+    - MONGODB_VERSION=2.6.10
+
+install:
+  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - tar xfz mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - export PATH=`pwd`/mongodb-linux-x86_64-$MONGODB_VERSION/bin:$PATH
+  - mkdir -p data/db
+  - mongod --dbpath=data/db &
+  - sleep 3
 
 node_js:
   - "8.9.4"
 
 script:
+    - mongo --eval 'db.hostInfo()'
     - "npm test"
