--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,30 +1,24 @@
 ---
-parser: babel-eslint
-
+extends: 'eslint:recommended'
 env:
-  node: true
   es6: true
-
-rules:
-  indent: [2, 4, { SwitchCase: 1 }]
-  func-names: [2, 'never']
-  arrow-parens: [2, 'as-needed']
-  arrow-body-style: [0, 'as-needed']
-  max-len: [2, 120, 4]
-  no-tabs: [2]
-  no-useless-escape: [0]
-  no-useless-computed-key: [0]
-  semi: [2, never]
-
+  jest: true
+  node: true
 parserOptions:
-  ecmaVersion: 8
   sourceType: module
-
-  ecmaFeatures:
-    jsx: true
-    experimentalObjectRestSpread: true
-
-settings:
-  import/resolver:
-    node:
-      moduleDirectory: ['node_modules']
+  ecmaVersion: 2017
+rules:
+  indent:
+    - error
+    - 4
+  linebreak-style:
+    - error
+    - unix
+  quotes:
+    - error
+    - single
+  semi:
+    - error
+    - always
+  no-console:
+    - 0
