--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
-    "eslint": "^4.17.0",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.2",
     "jest": "^22.3.0",
