--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,9 @@ trim_trailing_whitespace = true
 max_line_length = 0
 trim_trailing_whitespace = false
 
+[*.yml]
+indent_size = 2
+
 [Makefile]
 indent_style = tabs
 indent_size = 4
