--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,15 @@
 ---
-extends: 'eslint:recommended'
-env:
-  es6: true
-  jest: true
-  node: true
+extends: 'airbnb-base'
 parserOptions:
-  sourceType: module
-  ecmaVersion: 2018
+  ecmaVersion: 8
+  ecmaFeatures:
+    experimentalObjectRestSpread: true
+
+env:
+  browser: true
+  node: true
+  jest: true
+
 rules:
   indent:
     - error
