--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,15 +1,12 @@
 ---
-extends: 'airbnb-base'
-parserOptions:
-  ecmaVersion: 8
-  ecmaFeatures:
-    experimentalObjectRestSpread: true
-
+extends: 'eslint:recommended'
 env:
-  browser: true
-  node: true
+  es6: true
   jest: true
-
+  node: true
+parserOptions:
+  sourceType: module
+  ecmaVersion: 2017
 rules:
   indent:
     - error
@@ -24,7 +21,4 @@ rules:
     - error
     - always
   no-console:
-    - 0
-  comma-dangle:
-    - 2
-    - objects: always-multiline
+   - 0
