--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,24 +1,22 @@
 ---
-extends: 'eslint:recommended'
+plugins: ['jest']
+extends: ['eslint:recommended', 'plugin:jest/recommended']
+
 env:
   es6: true
-  jest: true
   node: true
+  jest: true
+
 parserOptions:
   sourceType: module
   ecmaVersion: 2017
+  ecmaFeatures:
+    experimentalObjectRestSpread: true
+
 rules:
-  indent:
-    - error
-    - 4
-  linebreak-style:
-    - error
-    - unix
-  quotes:
-    - error
-    - single
-  semi:
-    - error
-    - always
-  no-console:
-   - 0
+  comma-dangle: [2, always-multiline]
+  indent: [2, 4]
+  linebreak-style: [2, unix]
+  no-console: 2
+  quotes: [2, single]
+  semi: [2, always]
