--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,10 @@
 ---
-plugins: ['jest']
-extends: ['eslint:recommended', 'plugin:jest/recommended']
+extends:
+  - eslint:recommended
+  - plugin:jest/recommended
+
+plugins:
+  - jest
 
 env:
   es6: true
